examples/test/testpolicy11175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11175
  namespace: namespace440
spec:
  podSelector:
    matchLabels:
      key23: value42
      key36: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value37
          key22: value12
      podSelector:
        matchLabels:
          key3: value24
